force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/cm_Has_Deposit__c.field-meta.xml
<CustomField>
    <fullName>cm_Has_Deposit__c</fullName>
    <description>Used to filter deposit records in the Review credit memo. Added for Commercial Accelerate project.</description>
    <formula>NOT(ISBLANK(LLC_BI__Deposit__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Deposit</label>
    <type>Checkbox</type>
</CustomField>