force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <description>Associates the Entity with a Relationship or Account by lookup</description>
    <label>Relationship Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Legal_Entities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>