force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Contingent_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contingent_Amount__c</fullName>
    <description>Amount of Contingent Liability.</description>
    <label>Contingent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>