force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Contingent_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contingent_Type__c</fullName>
    <description>This field is required. It is manually populated when creating an entity involvement. It describes the type guarantee: Joint &amp; Several - the financial institution could be awarded damages and collect from any one, several, or all of the liable parties; Pro Rata - responsibility for payment of facility is proportional among all the guarantors; Assign Specific - payment of a facility is a set specific dollar amount or percentage amount.</description>
    <label>Contingent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Joint &amp; Several</fullName>
                <default>true</default>
                <label>Joint &amp; Several</label>
            </value>
            <value>
                <fullName>Pro Rata</fullName>
            </value>
            <value>
                <fullName>Assign Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>