force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Entity_Type__c</fullName>
    <description>Typical Entity  types will  include Operating Company, Sole Proprietorship, EPC, Individual.  Value provided must match one of the values in the Entity Type pick list established for this organization.</description>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operating Company</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>EPC</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>