force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Guarantee_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Guarantee_Effective_Date__c</fullName>
    <description>This field is optional. The user manually populates this field. The date which a guarantee becomes effective. Typically, it is the date the facility funds.</description>
    <label>Guarantee Effective Date</label>
    <type>Date</type>
</CustomField>