force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Guarantee_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Guarantee_End_Date__c</fullName>
    <description>This field is optional. The user manually populates this field. It is the date which a guarantee ends. By default, this should be when repayment of a facility is satisfied.</description>
    <label>Guarantee End Date</label>
    <type>Date</type>
</CustomField>