force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Guarantee_Limit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Guarantee_Limit__c</fullName>
    <description>This field is optional. The user manually populates this field. It is the fixed dollar amount of a limited guarantee.</description>
    <label>Limited Guarantee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>