force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Guaranty_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Guaranty_Amount__c</fullName>
    <description>This field is optional. The user manually populates this field. This value specifices a type of guarantee in less specific terms than Contingent Type.</description>
    <label>Guarantee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>Amount of Note</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>