force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__HMDA_Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Applicant_Type__c</fullName>
    <description>The HMDA applicant type.</description>
    <inlineHelpText>The HMDA applicant type.</inlineHelpText>
    <label>HMDA Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Co-Applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>