force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__HMDA_Race__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Race__c</fullName>
    <description>This field is optional. The user manually populates this field on the HMDA page. This field stores the race of the applicant.</description>
    <label>Race - May select up to five</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code 1—American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Code 2—Asian</fullName>
            </value>
            <value>
                <fullName>Code 3—Black or African American</fullName>
            </value>
            <value>
                <fullName>Code 4—Native Hawaiian/Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Code 5—White</fullName>
            </value>
            <value>
                <fullName>Code 6—Info not pro­vided by applicant</fullName>
            </value>
            <value>
                <fullName>Code 7—Not applicable</fullName>
            </value>
            <value>
                <fullName>Code 8—No co-applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>