force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Is_Included_In_Global_Analysis__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Included_In_Global_Analysis__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field sets whether an entity is displayed in global analysis within spreads.</description>
    <inlineHelpText>This field sets whether an entity is displayed in global analysis within spreads.</inlineHelpText>
    <label>Is Included in Global Analysis</label>
    <type>Checkbox</type>
</CustomField>