force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Limited_Guaranty_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Limited_Guaranty_Amount__c</fullName>
    <description>This field has been deprecated.</description>
    <formula>IF(
ISPICKVAL(LLC_BI__Guaranty_Amount__c, &quot;Limited&quot;),
LLC_BI__Ownership__c * LLC_BI__Loan__r.LLC_BI__Amount__c,
0.00
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>-D Limited Guaranty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>