force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Monthly_Debt_Service__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Monthly_Debt_Service__c</fullName>
    <description>This field is optional. It automatically populates by the debt schedule in the spreading application. It stores monthly debt service, which is used within the spreading application to determine the annual debt service.</description>
    <label>Monthly Debt Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>