force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Notes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Notes__c</fullName>
    <description>Text area used to enter notes about the Entity</description>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>