force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Ownership__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ownership__c</fullName>
    <description>Percentage of Contingent Liability</description>
    <label>Contingent Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>