force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Realestate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Realestate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to show if the legal Entity has real estate.  If the Legal Entity Type is an EPC, check Legal Entity.</description>
    <inlineHelpText>Check box if the legal entity has realestate. Check this box if the Legal Entity Type is EPC</inlineHelpText>
    <label>Realestate</label>
    <type>Checkbox</type>
</CustomField>