force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship_Type__c</fullName>
    <description>Describes relationship ownership for Deposit account types.</description>
    <inlineHelpText>Describes relationship ownership for Deposit account types.</inlineHelpText>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Owner</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>Joint Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>