force-app/main/default/objects/LLC_BI__Legal_Entities__c/recordTypes/LLC_BI__Deposit_Involvement.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Deposit_Involvement</fullName>
    <active>true</active>
    <label>Deposit Involvement</label>
</RecordType>