force-app/main/default/objects/LLC_BI__Legal_Entities__c/recordTypes/LLC_BI__Loan_Involvement.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Loan_Involvement</fullName>
    <active>true</active>
    <label>Loan Involvement</label>
</RecordType>